--- a/frontend/src/components/pages/home/home-es.html
+++ b/frontend/src/components/pages/home/home-es.html
@@ -1,62 +1,210 @@
-<h3>Bienvenidos a Monitool!</h3>
-<p>Monitool es una extensión de la intranet de la ONG</p>
-<p>El objetivo del proyecto es centralizar los datos generados por los proyectos de Médecins du Monde</p>
+<div class="row">
+	<div class="col-xs-4">
+		<legend>
+			<i class="pull-right fa fa-globe"></i>
+			Pourquoi une plateforme en ligne
+		</legend>
+
+		<div class="project-content-inner">
+			<ul>
+				<li style="margin-bottom: 5px">
+					<strong>Estructurar</strong> el sistema de monitoreo de los proyectos
+				</li>
+				<li style="margin-bottom: 5px">
+					<strong>Aumentar la fiabilidad</strong><br/>
+					<ul>
+						<li>Hacer pruebas de coherencia para limitar los errores de entrada</li>
+						<li>Limitar los errores de formulas en indicadores</li>
+					</ul>
+				</li>
+				<li style="margin-bottom: 5px">
+					<strong>Tomar distancia con los datos</strong><br/>
+					<ul>
+						<li>Fomentar proyectos geográficamente remotos a utilizar los mismos indicadores cuando miden magnitudes comparables.</li>
+						<li>Contar con mecanismos para comparar el valor de un indicador en un proyecto, con el mismo valor para todos los demás.</li>
+					</ul>
+				</li>
+				<li style="margin-bottom: 5px">
+					<strong>Facilitar la comunicación</strong><br/>
+					<ul>
+						<li>Proporcionar acceso a los datos de los proyectos a servicios que estaban excluídos (gestión, comunicación, ...).</li>
+						<li>Tener una versión única de los datos compartidos entre la sede y los terrenos</li>
+					</ul>
+				</li>
+				<li style="margin-bottom: 5px">
+					<strong>Estandarizar</strong><br/>
+					<ul>
+						<li>Facilitar el turn-over al limitar el uso de diferentes herramientas en cada proyecto.</li>
+						<li>Reducir la curva de aprendizaje necesaria para el analisis de datos.</li>
+					</ul>
+				</li>
+			</ul>
+		</div>
+	</div>
+	<div class="col-xs-8">
+		<legend>
+			<i class="pull-right fa fa-lightbulb-o"></i>
+			A tener en mente
+		</legend>
+		<div class="project-content-inner">
+			<p>
+				Monitool es una herramienta de monitoreo.
+			</p>
+			<p>
+				Participa en el monitoreo permanente, continuo y sistemático de la situación y su evolución a lo largo de la vida de un proyecto.
+			</p>
+			<p>
+				El objetivo de esta herramienta es ayudar en la toma de decisiones, a través del monitoreo regular de indicadores que le informarán sobre el progreso de sus actividades, y la contribución de estas actividades a los resultados y objetivos establecidos por su proyecto.
+			</p>
+			<p>
+				Si bien puede contribuir, su objetivo principal no es realizar monitoreo epidemiológico, o centralizar hojas de morbilidad que consumen mucho tiempo y tienen poco valor en la gestión de proyectos, especialmente en proyectos de apoyo a estructuras de salud.
+			</p>
+		</div>
+
+		<legend>
+			<i class="pull-right fa fa-play"></i>
+			¿Cómo empezar?
+		</legend>
+
+		<div class="project-content-inner">
+
+			<p>Antes de configurar un proyecto en Monitool, es necesario</p>
+			<ul>
+				<li>
+					Diseñar su proyecto de referencia: marco lógico referencial con indicadores de resultado, efecto y si es necesario de proceso.
+				</li>
+				<li>
+					Detalle todos sus indicadores con la herramienta <i>resumen de indicadores</i> de su proyecto de referencia y de los donantes (si son diferentes).
+					<ul>
+						<li>
+							Por qué: Comience identificando cómo su indicador medirá el logro del resultado con el que está asociado o el efecto esperado, y cómo lo analizará (cuadros, tablas, frecuencia). Es esencial planificar el uso de datos para la toma de decisiones).
+						</li>
+						<li>
+							Cómo: identificar todos los datos y las desagregaciones necesarias para calcular los indicadores identificados.
+						</li>
+						<li>Cuándo, dónde, por y para quién</li>
+					</ul>
+				</li>
+				<li>
+					Construya un <i>diagrama de flujo de datos</i> del <i>resumen de indicadores</i> para esquematizar el flujo de datos en su proyecto
+					<ul>
+						<li>Fuentes de fuentes de datos organizadas de acuerdo con el plan del proyecto</li>
+						<li>Los datos y sus desagregaciones precisas</li>
+						<li>Indicadores organizados por marco lógico</li>
+					</ul>
+				</li>
+			</ul>
+
+		</div>
+	</div>
+</div>
 
 <div class="row">
-	<div class="col-xs-6">
-		<h4>¿Por qué</h4>
-		<ul style="margin-bottom: 10px">
-			<li>
-				<strong>Aumentar la fiabilidad</strong><br/>
 
-				<ul style="margin-bottom: 10px">
-					<li>Reducir la curva de aprendizaje necesaria para el analisis de datos</li>
-					<li>Hacer pruebas de coherencia para limitar los errores de entrada</li>
-					<li>Limitar los errores de formulas en indicadores</li>
-				</ul>
-			</li>
-			<li>
-				<strong>Tomar distancia con los datos</strong><br/>
+	<div class="col-xs-4">
 
-				<ul style="margin-bottom: 10px">
-					<li>Fomentar proyectos geográficamente remotos a utilizar los mismos indicadores cuando miden magnitudes comparables.</li>
-					<li>Contar con mecanismos para comparar el valor de un indicador en un proyecto, con el mismo valor para todos los demás.</li>
-				</ul>
-			</li>
-			<li>
-				<strong>Facilitar la comunicación</strong><br/>
+		<legend>
+			<i class="pull-right fa fa-clock-o"></i>
+			¿Cuando usar Monitool?
+		</legend>
+		<div class="project-content-inner">
+			<p>Monitool tiene un papel durante cuatro etapas de un proyecto</p>
 
-				<ul style="margin-bottom: 10px">
-					<li>Proporcionar acceso a los datos de los proyectos a servicios que estaban excluídos (gestión, comunicación, .. ).</li>
-					<li>Tener una versión única de los datos compartidos entre la sede y los terrenos</li>
-				</ul>
-			</li>
-		</ul>
+			<ul style="margin-bottom: 10px">
+				<li>
+					<strong>Diseño del marco lógico</strong><br/>
+					Con la provisión de los marcos lógicos de los demas proyectos, sus indicadores, valores de base y objectivos.
+				</li>
+				<li>
+					<strong>Creación de las herramientas de supervisión</strong><br/>
+					Ayuda a explicitar el camino seguido por los datos y a fijar plazos límite
+				</li>
+				<li>
+					<strong>Seguimiento</strong><br/>
+					Cree gráficos y tablas con los datos mas la dia disponibles
+				</li>
+				<li>
+					<strong>Post-cierre</strong><br/>
+					Sus proyectos estan archivados y disponibles para referencias futuras
+				</li>
+			</ul>
+		</div>
 	</div>
-	<div class="col-xs-6">
-		<h4>Cuando</h4>
-		<p>Monitool tiene un papel durante cuatro etapas de un proyecto</p>
-		<ul style="margin-bottom: 10px">
-			<li>
-				<strong>Diseño del marco lógico</strong><br/>
 
-				Con la provisión de los marcos lógicos de los demas proyectos, sus indicadores, valores de base y objectivos.
-			</li>
-			<li>
-				<strong>Creación de las herramientas de supervisión</strong><br/>
+	<div class="col-xs-4">
 
-				Ayuda a explicitar el camino seguido por los datos y a fijar plazos límite
-			</li>
-			<li>
-				<strong>Seguimiento</strong><br/>
+		<legend>
+			<i class="pull-right fa fa-book"></i>
+			Guides & Documents supports
+		</legend>
 
-				Cree gráficos y tablas con los datos mas la dia disponibles
-			</li>
-			<li>
-				<strong>Post-cierre</strong><br/>
+		<div class="project-content-inner">
+			<dl>
+				<dt>Guía de planificación de proyectos de salud (2015)</dt>
+				<dd>
+					La guía de
+					<a href="https://mdm1.sharepoint.com/directions/dsp/SitePages/Guides.aspx" target="_blank">
+						planificación de proyectos de salud
+						<i class="fa fa-external-link"></i>
+					</a>
 
-				Sus proyectos son archivados y disponibles para referencias futuras!
-			</li>
-		</ul>
+					 propone
+					a los actores de los proyectos de MdM un método
+					de planificación de acuerdo con los valores reafirmados
+					y precisados en el proyecto asociativo (curar, dar
+					testimonio y hacer incidencia política, y acompañar
+					a las comunidades en su voluntad de cambio social).
+				</dd>
+
+				<dt>Caja de herramientas de planificación de proyectos de salud</dt>
+				<dd>
+					La
+					<a href="https://mdm1.sharepoint.com/directions/doi/s2ap/biblio/Pages/Toolkit.aspx" target="_blank">
+						caja de herramientas
+						<i class="fa fa-external-link"></i>
+					</a>
+					le propone diferentes herramientras, mayoritariamente basadas en Excel, para contribuir
+					a estructurar su planificación.
+				</dd>
+
+				<dt>Biblioteca monitoreo de la DSP</dt>
+				<dd>
+					Esta
+					<a href="https://mdm1.sharepoint.com/directions/dsp/SitePages/Monitoring.aspx">
+						biblioteca
+						<i class="fa fa-external-link"></i>
+					</a>
+					le ofrece varios
+					hojas de datos técnicos, documentos de capacitación y posicionamiento relacionados con el monitoreo, y es mantenida por la DSP.
+				</dd>
+			</dl>
+		</div>
+
+	</div>
+	<div class="col-xs-4">
+
+		<legend>
+			<i class="pull-right fa fa-file-excel-o"></i>
+			Otras herramientas
+		</legend>
+
+		<div class="project-content-inner">
+			<dl>
+				<dt>Resumen de indicadores</dt>
+				<dd>
+					Disponible en el archivo de los
+					<a href="https://mdm1.sharepoint.com/:u:/r/directions/dsp/Documents%20partages/MdM_essential%20document%20MONITORING_EN.7z">
+						Documentos fundamentales al monitoreo
+						<i class="fa fa-download"></i>
+					</a>,
+					esta herramienta centraliza para todos sus indicadores el "cuando", "cómo", "dónde", "por quién", "porqué" y "para quién" los datos que procesa deber ser colectados e analizados.
+				</dd>
+
+				<dt>Diagrama de flujo de datos</dt>
+				<dd>
+					En el mismo archivo, esta herramienta esquematiza la ruta que siguen sus datos a lo largo del tiempo, desde el formulario que se usó para recopilarlos en un establecimiento de salud hasta el informe y la toma de decisiones.
+				</dd>
+			</dl>
+		</div>
 	</div>
 </div>
