--- a/frontend/src/components/pages/home/home-fr.html
+++ b/frontend/src/components/pages/home/home-fr.html
@@ -69,16 +69,16 @@
 
 		<div class="project-content-inner">
 
-			<p>Avant de configurer le projet dans Monitool il est nécessaire de</p>
+			<p>Avant de configurer un projet dans Monitool il est nécessaire de</p>
 			<ul>
 				<li>
-					Concevoir votre projet de référence: cadre logique de référénce avec des indicateurs en priorité de résultat, d’effet et si nécessaire de processus.
+					Concevoir votre projet de référence: cadre logique de référénce avec des indicateurs de résultat, d’effet et si nécessaire de processus.
 				</li>
 				<li>
 					Détailler tous vos indicateurs avec l’outil <i>résumé des indicateurs</i> du projet de référence et des bailleurs (s’ils sont différents).
 					<ul>
 						<li>
-							Pourquoi: Commencez par identifier en quoi votre indicateur va permettre de mesurer l’atteinte du résultat auquel il est associé ou l’effet attendu, et comment vous l'analyserez (graphiques, tableaux, avec quelle fréquence: il est indispensable de planifier l’utilisation des données pour la prise de décisison).
+							Pourquoi: Commencez par identifier en quoi votre indicateur va permettre de mesurer l’atteinte du résultat auquel il est associé ou l’effet attendu, et comment vous l'analyserez (graphiques, tableaux, avec quelle fréquence. Il est indispensable de planifier l’utilisation des données pour la prise de décisison).
 						</li>
 						<li>
 							Comment: identifiez toutes les données et désagrégations nécessaires au calcul des indicateurs identifiés.
