Continue working on translations

--- a/frontend/src/app.css
+++ b/frontend/src/app.css
@@ -235,6 +235,10 @@ textarea {
   cursor: pointer;
 }
 
+.nonclickable {
+  cursor: not-allowed;
+}
+
 
       .panel-collapse>.list-group .list-group-item:first-child {border-top-right-radius: 0;border-top-left-radius: 0;}
       .panel-collapse>.list-group .list-group-item {border-width: 1px 0;}
