--- a/frontend/src/components/pages/home/home-en.html
+++ b/frontend/src/components/pages/home/home-en.html
@@ -182,7 +182,7 @@
 
 		<legend>
 			<i class="pull-right fa fa-file-excel-o"></i>
-			Autres outils
+			Other tools
 		</legend>
 
 		<div class="project-content-inner">
