--- a/frontend/src/components/pages/home/home-es.html
+++ b/frontend/src/components/pages/home/home-es.html
@@ -2,7 +2,7 @@
 	<div class="col-xs-4">
 		<legend>
 			<i class="pull-right fa fa-globe"></i>
-			Pourquoi une plateforme en ligne
+			¿Por qué una plataforma en línea?
 		</legend>
 
 		<div class="project-content-inner">
@@ -135,7 +135,7 @@
 
 		<legend>
 			<i class="pull-right fa fa-book"></i>
-			Guides & Documents supports
+			Guías y Documentos
 		</legend>
 
 		<div class="project-content-inner">
