Fix instant translation in project history

--- a/frontend/src/components/pages/project-structure-history/history.html
+++ b/frontend/src/components/pages/project-structure-history/history.html
@@ -53,7 +53,7 @@
 	<tfoot>
 		<tr ng-if="$ctrl.revisions.length && !$ctrl.finished && !$ctrl.loading">
 			<td style="text-align: center" colspan="2">
-				<a ng-click="$ctrl.onShowMoreClicked()" translate="project.revision_show_more"></a>
+				<a ng-click="$ctrl.onShowMoreClicked()" class="btn btn-default btn-xs" translate="project.revision_show_more"></a>
 			</td>
 		</tr>
 	</tfoot>
