Make ds, lf and user list more readable by using groups when displaying lists of sites/data sources.

--- a/frontend/src/components/pages/project-structure-data-source/data-source-list.html
+++ b/frontend/src/components/pages/project-structure-data-source/data-source-list.html
@@ -29,7 +29,7 @@
 			</div>
 			<div>
 				<strong translate="project.collection_site_list"></strong>
-				{{dataSource.entities|getObjects:$ctrl.project.entities|pluck:'name'|join:', '}}
+				<element-groups ids="dataSource.entities" items="$ctrl.project.entities" groups="$ctrl.project.groups"></element-groups>
 			</div>
 
 			<div class="panel-buttons btn-group">
