--- a/frontend/src/components/pages/project-structure-logical-frame/logframe-list.html
+++ b/frontend/src/components/pages/project-structure-logical-frame/logframe-list.html
@@ -26,7 +26,7 @@
 			</div>
 			<div>
 				<strong translate="project.collection_site_list"></strong>
-				{{logicalFrame.entities|getObjects:$ctrl.project.entities|pluck:'name'|join:', '}}
+				<element-groups ids="logicalFrame.entities" items="$ctrl.project.entities" groups="$ctrl.project.groups"></element-groups>
 			</div>
 
 			<div class="panel-buttons btn-group">
