Fix user deletion bug. Implementation was missing

--- a/frontend/src/components/pages/project-structure-user/user-list.html
+++ b/frontend/src/components/pages/project-structure-user/user-list.html
@@ -49,7 +49,7 @@
 
 					  <ul class="dropdown-menu">
 						<li>
-							<a ng-click="$ctrl.delete(user)">
+							<a ng-click="$ctrl.onDeleteClicked(user)">
 								<i class="fa fa-trash text-danger"></i>
 								<span class="text-danger" translate="shared.delete"></span>
 							</a>
