Fix menu for partners

--- a/frontend/src/components/pages/menu/menu.html
+++ b/frontend/src/components/pages/menu/menu.html
@@ -30,7 +30,7 @@
 				</li>
 
 				<li ng-class="{active: $ctrl.$state.includes('main.project')}" ng-if="$root.userCtx.type == 'partner'">
-					<a ui-sref="main.project.reporting_general">
+					<a ui-sref="main.project.reporting.home">
 						<i class="fa fa-fw fa-object-group"></i>
 						<span translate="shared.project"></span>
 					</a>
