Fix english translation in homepage

--- a/frontend/src/components/pages/home/home-en.html
+++ b/frontend/src/components/pages/home/home-en.html
@@ -78,7 +78,7 @@
 							How do you plan on analysing it (graphs, tables, with which periodicity: you need to plan in advance how your data will be used for decision making).
 						</li>
 						<li>
-							How: identifie all data and disagregations that will be needed to compute each one of your indicators.
+							How: identify all data and disagregations that will be needed to compute each one of your indicators.
 						</li>
 						<li>When, where, by and for whom?</li>
 					</ul>
@@ -113,16 +113,16 @@
 					Monitool provides all others projets logframes, with the list of used indicators and targets for each one of them.
 				</li>
 				<li>
-					<strong>Mise en place des outils de suivi</strong><br/>
+					<strong>Deployment of monitoring tools</strong><br/>
 
 					Explicitely write down the path followed by your data and attach deadlines on data collection.
 				</li>
 				<li>
-					<strong>Suivi régulier</strong><br/>
+					<strong>Periodic follow-up</strong><br/>
 					Reporting graphs and tables of your choice are available and built with the most up-to-date data.
 				</li>
 				<li>
-					<strong>Post-fermeture</strong><br/>
+					<strong>After closing</strong><br/>
 					Your project will be archived and available for future references.
 				</li>
 			</ul>
