--- a/frontend/src/components/shared/reporting/tr-indicator.html
+++ b/frontend/src/components/shared/reporting/tr-indicator.html
@@ -31,10 +31,10 @@
 	</div>
 </td>
 
-<td ng-class="{empty: $ctrl.indicator.baseline === null}">
+<td class="row-baseline" ng-class="{empty: $ctrl.indicator.baseline === null}">
 	<span>{{$ctrl.indicator.baseline}}{{$ctrl.indicator|indicatorUnit}}</span>
 </td>
-<td ng-class="{empty: $ctrl.indicator.target === null}">
+<td class="row-target" ng-class="{empty: $ctrl.indicator.target === null}">
 	<span>{{$ctrl.indicator.target}}{{$ctrl.indicator|indicatorUnit}}</span>
 </td>
 
