Improve graph display

--- a/frontend/src/components/shared/reporting/export-svg.html
+++ b/frontend/src/components/shared/reporting/export-svg.html
@@ -1,5 +1,6 @@
-<button ng-click="$ctrl.onClick()" class="btn btn-primary btn-xs pull-right noprint">
+<button
+	ng-click="$ctrl.onClick()"
+	class="btn btn-default btn-xxs noprint">
 	<i class="fa fa-download"></i>
 	<span translate="shared.download_plot"></span>
 </button>
-<div style="clear: both"></div>
