--- a/frontend/src/components/shared/reporting/graph.html
+++ b/frontend/src/components/shared/reporting/graph.html
@@ -1,2 +1,9 @@
-<export-svg filename="$ctrl.filename"></export-svg>
-<div></div>
+<div class="project-content-inner" style="position: relative; height: 210px; overflow: hidden;">
+	<div></div>
+	<export-svg
+		filename="$ctrl.filename"
+		style="position: absolute; top: 10px; right: 10px;">
+	</export-svg>
+</div>
+
+
