--- a/frontend/src/components/pages/project-reporting-general/project-group-by.html
+++ b/frontend/src/components/pages/project-reporting-general/project-group-by.html
@@ -3,7 +3,7 @@
 
 	<select
 		id="group-by-input"
-		class="form-control input-sm"
+		class="form-control"
 		ng-model="$ctrl.groupBy"
 		ng-change="$ctrl.onValueChange()">
 		<option value="{{periodicity}}" ng-repeat="periodicity in $ctrl.periodicities">
@@ -12,5 +12,7 @@
 		<option value="entity" translate="project.collection_site_list"></option>
 		<option value="group" translate="project.groups"></option>
 	</select>
+
+	<export-csv class="input-group-btn"></export-csv>
 
 </div>
