--- a/frontend/src/components/shared/reporting/export-csv.html
+++ b/frontend/src/components/shared/reporting/export-csv.html
@@ -1,7 +1,6 @@
 <button
 	ng-click="$ctrl.onClick()"
-	class="btn btn-primary btn-xs pull-right noprint" style="margin-bottom: 10px;">
-
+	class="btn btn-default">
 	<i class="fa fa-download"></i>
 	<span translate="shared.download_table"></span>
 </button>
